# ethereum_consensus_monitor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  justfile
.github/workflows/: ci.yml  docker.yml  test-and-lint.yml
frontend/: deps.edn  dev.cljs.edn  figwheel-main.edn  prod.cljs.edn
frontend/resources/public/: index.html
frontend/src/com/github/ralexstokes/: api_client.cljs  app.cljs  block_explorer.cljs  block_tree.cljs  debug.cljs  navigation.cljs  nodes.cljs  participation.cljs  slot_clock.cljs  state.cljs  ui.cljs  validator.cljs  weak_subjectivity.cljs
frontend/src/dev/: proxy.clj
public/: index.html
public/js/: main.js
src/: api_server.rs  beacon_api_client.rs  chain.rs  config.rs  eth2_api_client.rs  fork_choice.rs  lib.rs  main.rs  monitor.rs  node.rs  timer.rs
