[package]
name = "ethereum_consensus_monitor"
version = "0.1.0"
authors = ["Alex Stokes <r.alex.stokes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.11", features = ["json"]}
eventsource-client = { git = "https://github.com/ralexstokes/rust-eventsource-client", branch = "handle-rn-line-ending" }
futures = "0.3"
warp = "0.3.1"
log = "0.4"
pretty_env_logger = "0.4"
clap = "3.0.0-beta.5"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
eth2 = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
slot_clock = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
proto_array = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
base64 = "0.13.0"

[patch]
[patch.crates-io]
tree_hash = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
tree_hash_derive = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
eth2_ssz_types = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
eth2_hashing = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
